# vuer-examples

./: .gitmodules  LICENSE  README.md  add_submodules.sh  setup_example_repos.py
vuer-example-100_colmap/: README.md  colmap_utils.py  main.py  requirements.txt
vuer-example-101_4d_recon/: main.py  pyproject.toml  requirements.txt
vuer-example-102_hand_pose_mano/: main.py  pyproject.toml
vuer-example-102_hand_pose_mano/assets/: mano_joint_regressor.npz
